fixed header moving words around on small screens

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     background-color: white;
 }
 #header {
+    width: 90%;
     font-weight: 700;
     font-size: 4rem;
     opacity: 0;
